--- a/app/views/pages_new/_borse_di_studio.haml
+++ b/app/views/pages_new/_borse_di_studio.haml
@@ -9,17 +9,25 @@
     .separator15.pattern
     .separator30
     .line.article
-    %p L’Accademia mette in palio 10 Borse di Studio per frequentare i corsi 15 mesi di Grafica Pubblicitaria, Interior Design in partenza il prossimo 29 febbraio 2016.
-    %p Le Borse di Studio in palio contribuiranno a coprire il costo del primo modulo del corso prescelto per il 50%.
-    %p Alla fine del primo modulo di corso si potrà partecipare all’assegnazione di Borse di Studio al 50% per frequentare il secondo modulo sulla base della media del profitto ottenuto.
-    %p La possibilità di poter frequentare i corsi mediante Borse di Studio è nata dalla necessità di estendere ad un maggior numero di giovani l’opportunità di conseguire la specializzazione necessaria per un futuro nel mondo del lavoro.
-    %p Il termine per la presentazione delle richieste di Borsa di Studio scade il 30 gennaio 2016.
+    - if it?
+      %p L’Accademia mette in palio 10 Borse di Studio per frequentare i corsi 15 mesi di Grafica Pubblicitaria, Interior Design in partenza il prossimo 29 febbraio 2016.
+      %p Le Borse di Studio in palio contribuiranno a coprire il costo del primo modulo del corso prescelto per il 50%.
+      %p Alla fine del primo modulo di corso si potrà partecipare all’assegnazione di Borse di Studio al 50% per frequentare il secondo modulo sulla base della media del profitto ottenuto.
+      %p La possibilità di poter frequentare i corsi mediante Borse di Studio è nata dalla necessità di estendere ad un maggior numero di giovani l’opportunità di conseguire la specializzazione necessaria per un futuro nel mondo del lavoro.
+      %p Il termine per la presentazione delle richieste di Borsa di Studio scade il 30 gennaio 2016.
+    - else
+      :markdown
+        For the academic year 2016/17, 10 Scholarships will be awarded to young people who plan to attend the first semester courses in  INTERIOR DESIGN, GRAPHIC DESIGN and DIGITAL COMMUNICATION.
+
+        Scholarships cover 50% of the cost of the first semester and, at the end of the first semester, eligible students may apply for another 50% scholarship for the second semester, based on the results achieved.
+
+        Scholarships make it possible for more young people to obtain the specialization necessary to enter the workforce.
 
     .separator100
     .line
       .col3.line-tablet
       .col4.line-tablet
-        %a.line.center-content.btn.btn-medium.color-white.bg-primary{:href => "/pages/borse_di_studio"}
+        %a.line.center-content.btn.btn-medium.color-white.bg-primary{:href => "/pages/#{it? ? "borse_di_studio" : "scolarships"}"}
           .separator3
           %h4
             INVIA CANDIDATURA
