--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -43,7 +43,7 @@
   .line-compress.line-max
     .separator10
     %h1.line.center-content.article-title.font-custom
-      L'Accademia
+      = tf "L'Accademia", "The Accademia"
     .separator30
     .separator15.pattern
     .separator30
@@ -53,11 +53,17 @@
           %img.img-media{:src=> "/images/accademia.jpg", :class => "col9 line-tablet"}
           .separator30
         .col6.line-tablet
-          %p Dal 1956 l’Accademia d’Arte e Design Leonetto Cappiello è il luogo ideale per esprimere la propria creatività e per tradurla in una reale opportunità di lavoro. Ogni professione, anche la più creativa, non si può improvvisare.
-          %p Ha bisogno di basi, di nozioni, di tecniche. Le idee sono importanti ma da sole non bastano: è necessario dar loro forma, la migliore possibile, e saperle applicare.
-          %p Con più di cinquant’anni di esperienza nell’insegnamento e nella formazione, e grazie al costante aggiornamento dei suoi corsi, l’Accademia Cappiello rappresenta un polo specializzato nel qualificare professionisti nei settori della grafica, della progettazione e decorazione d’interni, della pubblicità e dell’illustrazione editoriale.
-          %p Docenti qualificati, che dividono il loro tempo tra la professione e l’insegnamento, portano in aula le loro esperienze rappresentano la migliore garanzia di un reale confronto con il mondo del lavoro.
-          %p Una didattica esclusiva, improntata sulla cultura del progetto, che esercita pensiero e creatività e insegna a finalizzare le idee attraverso gli strumenti e i software più aggiornati utilizzati dai professionisti del settore.
+          - if it?
+            %p Dal 1956 l’Accademia d’Arte e Design Leonetto Cappiello è il luogo ideale per esprimere la propria creatività e per tradurla in una reale opportunità di lavoro. Ogni professione, anche la più creativa, non si può improvvisare.
+            %p Ha bisogno di basi, di nozioni, di tecniche. Le idee sono importanti ma da sole non bastano: è necessario dar loro forma, la migliore possibile, e saperle applicare.
+            %p Con più di cinquant’anni di esperienza nell’insegnamento e nella formazione, e grazie al costante aggiornamento dei suoi corsi, l’Accademia Cappiello rappresenta un polo specializzato nel qualificare professionisti nei settori della grafica, della progettazione e decorazione d’interni, della pubblicità e dell’illustrazione editoriale.
+            %p Docenti qualificati, che dividono il loro tempo tra la professione e l’insegnamento, portano in aula le loro esperienze rappresentano la migliore garanzia di un reale confronto con il mondo del lavoro.
+            %p Una didattica esclusiva, improntata sulla cultura del progetto, che esercita pensiero e creatività e insegna a finalizzare le idee attraverso gli strumenti e i software più aggiornati utilizzati dai professionisti del settore.
+          - else
+            %p Since 1956, the Leonetto Cappiello Academy of Art and Design has been the ideal  place to develop one’s creativity and turn it into a profession.  Even the most creative profession cannot be improvised. Professionality requires a solid foundation, concepts and techniques. Ideas are important, but not sufficient, and need to be shaped and applied in the best way possible.
+            %p With over 50 years of experience in teaching, and thanks to a constant updating of its courses, the Cappiello Academy represents a specialized center for training tomorrow’s professionals in Graphics, Interior Design and Decorating, Advertising and Illustration.
+            %p Highly qualified teachers, who divide their time between professional work and teaching, bring their experience to the classroom and guarantee a  first-hand account work in their field.
+            %p An exclusive  conceptual  approach to projects stimulates thought and creativity and  teaches students to realize their ideas through  the most up-to-date  tools and software used by professionals.
       .separator100
   = render partial: "pages_new/corsi"
   .separator30
