--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -185,10 +185,10 @@
         .separator15
         .line.center-content
           Lingua
-          %a.font-medium.color-primary italiano
+          %a.font-medium{ href: "", class: "#{"color-primary" if it?}" } italiano
           %span
             |
-          %a.color-white english
+          %a.color-white{  } english
         .separator15
         %a.color-white.smooth-scroll{:href => "#contatti"}
           %i.fa.fa-phone
