--- a/app/views/pages_new/_borse_di_studio.haml
+++ b/app/views/pages_new/_borse_di_studio.haml
@@ -4,7 +4,7 @@
   .line-compress.line-max
     .separator50
     %h1.line.center-content.article-title.font-custom
-      Borse di Studio
+      = tf "Borse di Studio", "Scholarships"
     .separator30
     .separator15.pattern
     .separator30
