--- a/app/views/pages_new/_footer.haml
+++ b/app/views/pages_new/_footer.haml
@@ -3,19 +3,19 @@
   .separator30
   .line.line-footer.bg-black
     .col4.line-tablet.center-content-tablet
-      %img{:src => "/images/logo-footer.png", :width => "200"}
+      %img{src: "/images/logo-footer.png", width: "200"}
     .col5.line-tablet.right-content.center-content-tablet
       .separator15
       .separator15.tablet.mobile
-      %a.toggle-opacity-hover.color-muted-inverse{:href => "https://www.facebook.com/accademiaartedesigncappiello", :target => "_blank"}
+      %a.toggle-opacity-hover.color-muted-inverse{href: "https://www.facebook.com/accademiaartedesigncappiello", target: "_blank"}
         %i.fa.fa-2x.fa-facebook-official &nbsp;&nbsp;
-      %a.toggle-opacity-hover.color-muted-inverse{:href => "http://twitter.com/Acc_Cappiello", :target => "_blank"}
+      %a.toggle-opacity-hover.color-muted-inverse{href: "http://twitter.com/Acc_Cappiello", target: "_blank"}
         %i.fa.fa-2x.fa-twitter &nbsp;&nbsp;
-      %a.toggle-opacity-hover.color-muted-inverse{:href => "http://instagram.com/accademiacappiello", :target => "_blank"}
+      %a.toggle-opacity-hover.color-muted-inverse{href: "http://instagram.com/accademiacappiello", target: "_blank"}
         %i.fa.fa-2x.fa-instagram &nbsp;&nbsp;
-      %a.toggle-opacity-hover.color-muted-inverse{:href => "http://www.flickr.com/photos/accademiacappiello/", :target => "_blank"}
+      %a.toggle-opacity-hover.color-muted-inverse{href: "http://www.flickr.com/photos/accademiacappiello/", target: "_blank"}
         %i.fa.fa-2x.fa-flickr &nbsp;&nbsp;
-      %a.toggle-opacity-hover.color-muted-inverse{:href => "http://vimeo.com/user5798268", :target => "_blank"}
+      %a.toggle-opacity-hover.color-muted-inverse{href: "http://vimeo.com/user5798268", target: "_blank"}
         %i.fa.fa-2x.fa-vimeo
       .separator30.tablet.mobile
   .separator15
@@ -29,29 +29,29 @@
           %ul
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Accademia
+              %a.color-white.toggle-opacity-hover{href: "/#accademia"} Accademia
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Dove Siamo
+              %a.color-white.toggle-opacity-hover{href: "/#contatti"} Dove Siamo
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Contatti
+              %a.color-white.toggle-opacity-hover{href: "/#contatti"} Contatti
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Privacy Policy
+              %a.color-white.toggle-opacity-hover{href: "/TODO"} Privacy Policy
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Utilizzo dei Cookies
+              %a.color-white.toggle-opacity-hover{href: "/cookies"}= tf "Utilizzo dei Cookies", "Cookie Policy"
         .col5.line-tablet.color-white
           .separator30
           %h3.color-muted-inverse Opportunità
           %ul
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Borse di studio
+              %a.color-white.toggle-opacity-hover{href: "/#borse-di-studio"} Borse di studio
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Open Day!
+              %a.color-white.toggle-opacity-hover{href: "/pages/open_days"} Open Day!
       .col5.line-tablet.line-tablet
         .col5.line-tablet.color-white
           .separator30
@@ -59,23 +59,23 @@
           %ul
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Partnership
+              %a.color-white.toggle-opacity-hover{href: "#"} Partnership
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Offerte di lavoro
+              %a.color-white.toggle-opacity-hover{href: "#"} Offerte di lavoro
         .col5.line-tablet.color-white
           .separator30
           %h3.color-muted-inverse Corsi e Master
           %ul
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Corsi annuali
+              %a.color-white.toggle-opacity-hover{href: "/pag/courses_sel?s=annuale"} Corsi annuali
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Master
+              %a.color-white.toggle-opacity-hover{href: "/pag/courses_sel?s=master"} Master
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{:href => "#"} Corsi brevi e serali
+              %a.color-white.toggle-opacity-hover{href: "/pag/courses_sel?s=breve"} Corsi brevi e serali
       .separator100
       .color-muted-inverse.font-smaller.center-content © 2015 Accademia Cappiello - Firenze
       .separator50
