--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -12,7 +12,7 @@
       .col5.line-tablet
         %a.bg-white.no-radius.col5.color-black.toggle-opacity-inverse-hover{ data: { set_id: "72157625778631893" } }
           .separator5
-          Grafica Pubblicitaria
+          = tf "Grafica Pubblicitaria", "Graphic Design"
           .separator5
         %a.bg-primary-2.color-white.no-radius.col5.toggle-opacity-inverse-hover{ data: { set_id: "72157625778629231" } }
           .separator5
@@ -26,7 +26,7 @@
           .separator5
         %a.bg-primary-4.color-white.no-radius.col5.toggle-opacity-inverse-hover{ data: { set_id: "72157625904044530" } }
           .separator5
-          Eventi
+          = tf "Eventi", "Events"
           .separator5
     .separator30
     .f_gallery
