--- a/app/views/pages_new/_footer.haml
+++ b/app/views/pages_new/_footer.haml
@@ -38,7 +38,7 @@
               %a.color-white.toggle-opacity-hover{href: "/#contatti"} Contatti
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{href: "/TODO"} Privacy Policy
+              %a.color-white.toggle-opacity-hover{href: "#TODO"} Privacy Policy
             .separator10
             %li
               %a.color-white.toggle-opacity-hover{href: "/cookies"}= tf "Utilizzo dei Cookies", "Cookie Policy"
@@ -59,10 +59,10 @@
           %ul
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{href: "#"} Partnership
+              %a.color-white.toggle-opacity-hover{href: "#TODO"} Partnership
             .separator10
             %li
-              %a.color-white.toggle-opacity-hover{href: "#"} Offerte di lavoro
+              %a.color-white.toggle-opacity-hover{href: "#TODO"} Offerte di lavoro
         .col5.line-tablet.color-white
           .separator30
           %h3.color-muted-inverse Corsi e Master
