last bits to translate

--- a/app/views/pages_new/_borse_di_studio.haml
+++ b/app/views/pages_new/_borse_di_studio.haml
@@ -30,7 +30,7 @@
         %a.line.center-content.btn.btn-medium.color-white.bg-primary{:href => "/pages/#{it? ? "borse_di_studio" : "scolarships"}"}
           .separator3
           %h4
-            INVIA CANDIDATURA
+            = tf "INVIA CANDIDATURA", "SEND SCOLARSHIP REQUEST"
           .separator3
       .col3.line-tablet
     .separator100
