--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -4,7 +4,7 @@
   .line-compress.line-max
     .separator50
     %h1.line.color-muted.center-content.article-title.font-custom
-      Lavori degli Studenti
+      = tf "Lavori degli Studenti", "Students Works"
     .separator30
     .separator15.pattern
     .separator30
