open days and events set up partials

--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -67,6 +67,10 @@
       .separator100
   = render partial: "pages_new/corsi"
   .separator30
+  = render partial: "pages_new/open_days"
+  .separator30
+  = render partial: "pages_new/eventi"
+  .separator30
   = render partial: "pages_new/borse_di_studio"
   .separator30
   = render partial: "pages_new/gallery"
