--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -185,7 +185,7 @@
           .separator10
           %a#link-mobile-borse-di-studio.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "/#borse_di_studio"}= tf "Borse di Studio", "Scolarships"
           .separator10
-          %a.btn.btn-small.bg-muted.color-white Open Day
+          %a#link-mobile-open-days.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "/#open-days"} Open Day
           .separator10
           %a#link-mobile-contatti.btn.btn-small.bg-muted.color-white.smooth-scroll{:href => "/#contatti"}= tf "Contatti", "Contacts"
           .separator15
@@ -268,7 +268,7 @@
               - nav_link :news
               %a#link-gallery.smooth-scroll{ href: "/#gallery" } Gallery
               %a#link-borse-di-studio.smooth-scroll{ href: "/#borse-di-studio" }= tf "Borse di studio", "Scolarships"
-              - nav_link :open_days
+              %a#link-open-days.smooth-scroll{ href: "/#open-days" } Open Days
               %a#link-contatti.smooth-scroll{ href: "/#contatti" }= tf "Contatti", "Contacts"
               -# nav_link :contatti
 
