--- a/app/views/pages_new/_borse_di_studio.haml
+++ b/app/views/pages_new/_borse_di_studio.haml
@@ -1,6 +1,6 @@
-.separator50#borse-di-studio
 .bg-white
-.line.bg-white
+.line.bg-white#borse-di-studio
+  .separator50
   .line-compress.line-max
     .separator50
     %h1.line.center-content.article-title.font-custom
