--- a/app/views/pages_new/_contatti.haml
+++ b/app/views/pages_new/_contatti.haml
@@ -1,5 +1,5 @@
-.separator50#contatti
-.line.bg-white
+.line.bg-white#contatti
+  .separator50
   .line-compress.line-max
     .separator50
     %h1.line.center-content.article-title.font-custom
