--- a/app/views/pages_new/_eventi.haml
+++ b/app/views/pages_new/_eventi.haml
@@ -1,5 +1,5 @@
-.line.bg-muted
-  .separator50#eventi
+.line.bg-muted#eventi
+  .separator50
   .line-compress.line-max
     .separator50
     %h1.line.color-muted.center-content.article-title.font-custom
