--- a/app/views/pages_new/_open_days.haml
+++ b/app/views/pages_new/_open_days.haml
@@ -1,6 +1,6 @@
-.separator50#open-days
 .bg-white
-.line.bg-white
+.line.bg-white#open-days
+  .separator50
   .line-compress.line-max
     .separator50
     %h1.line.center-content.article-title.font-custom
