--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -1,6 +1,6 @@
-.bg-white
+.bg-white#accademia
 .line.color-white
-  .separator50#accademia
+  .separator50
   .separator15
   .fixed-height
     .owl-carousel.line.bg-black
