--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -50,16 +50,27 @@ letter-spacing: initial;
 letter-spacing: "";
 font-weight: 300;
 font-family: "Open Sans", Helvetica Neue, Arial, sans-serif;
+font-size:14.5px;
 }
 body,html {
   max-width: 100%;
   overflow-x: hidden;
 }
+.opacity-0-3{
+  opacity:0.3;
+}
+.opacity1{
+  opacity:1;
+}
+.transition-opacity{
+transition: opacity 3s linear;
+-webkit-transition: opacity 3s linear;
+}
 .font-custom{
 font-family: 'Montserrat';
 }
 #cookies{
-  z-index:999999;
+  z-index:9999999999;
   background: black;
 }
 #map_canvas{
@@ -81,7 +92,8 @@ a.gallery_link img{
 box-shadow: 0 3px 6px lightgrey;
 }
 .article-title{
-font-size: 28px;
+font-size: 2.75em;
+line-height: 2em;
 }
 p {
 margin-top: 10px;
@@ -118,7 +130,6 @@ background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNb
 }
 
 /*Extra */
-
 .article img {
 float: left;
 margin: 0 2% 1% 0;
@@ -179,7 +190,7 @@ cursor: pointer;
 
 .header{
   box-shadow:0 2px 10px rgba(0,0,0, .1);
-  z-index:999;
+  z-index:9999;
   min-width:100%;
   float: none;
   margin:0 auto;
@@ -188,24 +199,27 @@ cursor: pointer;
   height:85px;
   background: white;
 }
-.header a {
-color:black;
+.header a{
+color:#333;
 }
 .header img{
   margin-top:10px;
 }
 .header .header-menu a,.header .header-menu a.active,.header .header-menu a:hover{
   line-height: 85px;
+  opacity:.6;
   padding: 33px 1%;
-  font-weight: 500;
+  font-weight: 800;
   font-size: 14px;
   margin:0 0 0 0;
 }
 .header-menu a:hover {
   background-color: rgba(0,0,0, .15);
+  opacity:.8;
  }
 .header .header-menu a:hover,.header .header-menu a.active{
   background-color: #eee;
+  opacity:.8;
 }
 /*Backgrounds */
 .bg-primary {
@@ -244,8 +258,11 @@ margin: 0 1%;
 float: left;
 box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 overflow: hidden;
-height:387px;
-max-height:387px;
+height:405px;
+max-height:405px;
+}
+.widget .btn{
+  font-size: 14px;
 }
 .widget-pic{
   height:200px;
@@ -395,6 +412,14 @@ opacity:.8;
 @media screen and (max-width: 800px) {
   .grid-item {
     margin-bottom: 3%;
+  }
+
+  body{
+    font-size:13.5px;
+  }
+  .article-title{
+    font-size:30px;
+    line-height: 50px;
   }
 }
 .corsi-nav a {
