--- a/app/views/pages_new/_corsi.haml
+++ b/app/views/pages_new/_corsi.haml
@@ -77,7 +77,7 @@
           .separator15
           .line-compress
             .line-compress
-              %h3
+              %h3.widget-title
                 =# corso[:title_url] #debug
                 = corso[:name]
               .separator5
