--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -258,14 +258,19 @@ margin: 0 1%;
 float: left;
 box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 overflow: hidden;
-height:405px;
-max-height:405px;
+height:415px;
+max-height:415px;
 }
 .widget .btn{
   font-size: 14px;
+  min-width: 120px;
 }
 .widget-pic{
   height:200px;
+}
+.widget-title{
+  font-size:18px;
+  margin-bottom:10px;
 }
 .widget-pic-title{
   color:white;
@@ -402,6 +407,10 @@ opacity:.8;
 .box {
   box-shadow:0 1px 4px rgba(0,0,0, .2);
   border-bottom:1px solid rgba(0,0,0, .1);
+}
+.btn{
+
+  border-radius:2px;
 }
 .fixed-height {
   height: 450px;
